<resources>
    <string name="app_name">Billie</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="na">N/A</string>
    <string name="trip">Trip</string>
    <string name="total">Total</string>
    <string name="light">Rear light</string>
    <string name="lock">Lock</string>
    <string name="log">Log</string>
    <string name="recenter">Recenter</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="mapbox_access_token">pk.eyJ1IjoiYW5lY296IiwiYSI6ImNrZGc4ZjFpejFiNXMyc3Fxcjlka3FnZXUifQ.BQ4SVxP6DyG9arBufxldyg</string>
</resources>