<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_batteryvoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/na"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textview_batterycharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/na"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/textview_rangekm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/na"
        android:layout_centerHorizontal="true"
        />

    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_dark_background"
        android:layout_below="@id/textview_batterycharge"/>

    <TextView
        android:id="@+id/textview_currentspeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="76sp"
        android:text="@string/na"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/divider_top"/>

    <View
        android:id="@+id/divider_bot"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_dark_background"
        android:layout_below="@id/textview_currentspeed"/>

    <TextView
        android:id="@+id/textview_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/total"
        android:layout_below="@+id/divider_bot"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textview_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/trip"
        android:layout_below="@+id/divider_bot"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/textview_odometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/na"
        android:layout_below="@+id/textview_total"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textview_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/na"
        android:layout_below="@+id/textview_odometer"/>

    <TextView
        android:id="@+id/textview_tripkm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/na"
        android:layout_below="@+id/textview_trip"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/textview_triptime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/na"
        android:layout_below="@+id/textview_tripkm"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/textview_taillight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/light"
        android:layout_below="@+id/divider_bot"
        android:layout_centerHorizontal="true"/>

    <Switch
        android:id="@+id/switch_taillight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_total"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textview_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/lock"
        android:layout_below="@+id/switch_taillight"
        android:layout_centerHorizontal="true"/>

    <Switch
        android:id="@+id/switch_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_lock"
        android:layout_centerHorizontal="true"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/switch_lock"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="@dimen/cardview_default_elevation">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

</RelativeLayout>